[gd_scene load_steps=6 format=2]

[ext_resource path="res://map/Map.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/kastenfrosch__success-jingle.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/terrain_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://map/TileMap.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/gameover.wav" type="AudioStream" id=5]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
script = ExtResource( 4 )

[node name="TruckTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HelliTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="PlaneTimer" type="Timer" parent="."]
wait_time = 40.0

[node name="Sounds" type="Node" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="WinSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 2 )

[connection signal="timeout" from="TruckTimer" to="." method="_on_TruckTimer_timeout"]
[connection signal="timeout" from="HelliTimer" to="." method="_on_HelliTimer_timeout"]
[connection signal="timeout" from="PlaneTimer" to="." method="_on_PlaneTimer_timeout"]
